exports[`test fetching renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 1334,
    }
  }>
  <IndeterminateProgress
    style={Object {}} />
  <TaskHeader
    date={2016-11-23T00:36:54.000Z}
    full={true}
    nbAnswers={1}
    onLayout={[Function]}
    postedBy={
      Object {
        "username": "Duck",
      }
    }
    title="Help me!" />
  <AnimatedComponent
    style={
      Object {
        "backgroundColor": "white",
        "height": 0,
      }
    }>
    <ScrollView>
      <KeyboardAvoidingView
        behavior="position"
        contentContainerStyle={
          Object {
            "backgroundColor": "white",
          }
        }
        keyboardVerticalOffset={0}>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }>
            <Vote
              score={5} />
            <View
              style={
                Object {
                  "flex": 1,
                  "flexGrow": 1,
                  "marginLeft": 2,
                  "marginRight": 5,
                  "marginTop": 4,
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "black",
                    "flexGrow": 1,
                    "fontSize": 16,
                  }
                }>
                No can do
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 4,
                  }
                }>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#BDBDBD",
                      "fontSize": 15,
                    }
                  }>
                  Joe
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#BDBDBD",
                    }
                  }>
                  23/11/16
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#f0f0f0",
                "height": 1,
                "width": 750,
              }
            } />
        </View>
        <AddAnswer
          addAnswer={[Function]}
          login={[Function]} />
      </KeyboardAvoidingView>
    </ScrollView>
  </AnimatedComponent>
</View>
`;

exports[`test fetching renders correctly if there is no answers 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 1334,
    }
  }>
  <TaskHeader
    date={2016-11-23T00:36:54.000Z}
    full={true}
    nbAnswers={0}
    onLayout={[Function]}
    postedBy={
      Object {
        "username": "Duck",
      }
    }
    title="Help me!" />
  <AnimatedComponent
    style={
      Object {
        "backgroundColor": "white",
        "height": 0,
      }
    }>
    <ScrollView>
      <KeyboardAvoidingView
        behavior="position"
        contentContainerStyle={
          Object {
            "backgroundColor": "white",
          }
        }
        keyboardVerticalOffset={0}>
        <Spinner
          spinnerAniDuration={1333}
          strokeWidth={3}
          style={
            Object {
              "alignSelf": "center",
              "marginBottom": 25,
              "marginTop": 50,
            }
          } />
        <AddAnswer
          addAnswer={[Function]}
          login={[Function]} />
      </KeyboardAvoidingView>
    </ScrollView>
  </AnimatedComponent>
</View>
`;

exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 1334,
    }
  }>
  <TaskHeader
    date={2016-11-23T00:36:54.000Z}
    full={true}
    nbAnswers={1}
    onLayout={[Function]}
    postedBy={
      Object {
        "username": "Duck",
      }
    }
    title="Help me!" />
  <AnimatedComponent
    style={
      Object {
        "backgroundColor": "white",
        "height": 0,
      }
    }>
    <ScrollView>
      <KeyboardAvoidingView
        behavior="position"
        contentContainerStyle={
          Object {
            "backgroundColor": "white",
          }
        }
        keyboardVerticalOffset={0}>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }>
            <Vote
              score={1} />
            <View
              style={
                Object {
                  "flex": 1,
                  "flexGrow": 1,
                  "marginLeft": 2,
                  "marginRight": 5,
                  "marginTop": 4,
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "black",
                    "flexGrow": 1,
                    "fontSize": 16,
                  }
                }>
                No can do
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 4,
                  }
                }>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#BDBDBD",
                      "fontSize": 15,
                    }
                  }>
                  Joe
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#BDBDBD",
                    }
                  }>
                  23/11/16
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#f0f0f0",
                "height": 1,
                "width": 750,
              }
            } />
        </View>
        <AddAnswer
          addAnswer={[Function]}
          login={[Function]} />
      </KeyboardAvoidingView>
    </ScrollView>
  </AnimatedComponent>
</View>
`;
